--- a/css/contact.css
+++ b/css/contact.css
@@ -1,7 +1,7 @@
 @charset "utf-8";
 
 
-.yc_contact #sub_banner .sub_visual .visual_img{background-image:url(../img_new/contact/bg1.jpg);}
+.yc_contact #sub_banner .sub_visual .visual_img{background-image:url(/images/sub_top_3.jpg);}
 
 /* 오시는 길 */
 .yc_location #sub_banner .sub_visual .visual_img{background-image:url(/images/sub_top_1.jpg);}
