--- a/css/main.css
+++ b/css/main.css
@@ -135,7 +135,7 @@
 .main .sec02 .banner_link{width: 210px;height: 40px;border-radius: 20px;border: 2px solid white;font-size: 18px;font-weight: 700;display: flex;align-items: center;justify-content: center;}
 .main .sec02 .banner_link:after{content: "";display: inline-block;width: 9px;vertical-align: top;background: url(../img_new/common/arrow_right_white.svg) no-repeat center / contain;height: 15px;margin-left: 12px;}
 @media(min-width:1001px) {
-    .main .sec02 .mask_text:before{content: "HISSEN";display: block;position: absolute;width: 100%;height: 100%;background-size: cover;background-repeat: no-repeat;background-position: center;-webkit-background-clip: text;font-size: 190px;font-weight: 900;color: transparent;white-space: nowrap;}
+    .main .sec02 .mask_text:before{content: "에이치비에스";display: block;position: absolute;width: 100%;height: 100%;background-size: cover;background-repeat: no-repeat;background-position: center;-webkit-background-clip: text;font-size: 190px;font-weight: 900;color: transparent;white-space: nowrap;}
     .main .sec02 .mask_text.type1:before{background-image: url(/images/brand_1.jpg);}
     .main .sec02 .mask_text.type2:before{background-image: url(/images/brand_2.jpg);}
     .main .sec02 .mask_text.type3:before{background-image: url(/images/brand_3.jpg);}
