이미지수정

--- a/css/main.css
+++ b/css/main.css
@@ -116,10 +116,13 @@
 .main .sec02 .mask_text.type3 .zoom_circle{background-image: url(/images/brand_3.jpg);}
 .main .sec02 .mask_text.type4 .zoom_circle{background-image: url(/images/brand_4.jpg);}
 .main .sec02 .mask_text.type5 .zoom_circle{background-image: url(/images/brand_5.jpg);}
+.main .sec02 .mask_text.type6 .zoom_circle{background-image: url(/images/brand_6.jpg);}
+.main .sec02 .mask_text.type7 .zoom_circle{background-image: url(/images/brand_7.jpg);}
+.main .sec02 .mask_text.type8 .zoom_circle{background-image: url(/images/brand_8.jpg);}
 
 .main .sec02 .tab_box{font-size: 0;margin: 50px 0;}
-.main .sec02 .tab_box .brand_tab{width: 180px;height: 58px;box-sizing: border-box;border: 1px solid #181818;font-size: 24px;font-weight: 700;background-color: transparent;border-radius: 29px;}
-.main .sec02 .tab_box .brand_tab + .brand_tab{margin-left: 20px;}
+.main .sec02 .tab_box .brand_tab{width: 120px;height: 40px;box-sizing: border-box;border: 1px solid #181818;font-size: 16px;font-weight: 700;background-color: transparent;border-radius: 30px;}
+.main .sec02 .tab_box .brand_tab + .brand_tab{margin-left: 10px;}
 .main .sec02 .tab_box .brand_tab.active{background-color: #181818;color: white;transition: 250ms ease-in-out;transition-property: background-color, color;}
 .main .sec02 .matchbox{margin-bottom: 40px;}
 .main .sec02 .matchtext{display: none;font-size: 18px;line-height: 26px;}
@@ -141,6 +144,9 @@
     .main .sec02 .mask_text.type3:before{background-image: url(/images/brand_3.jpg);}
     .main .sec02 .mask_text.type4:before{background-image: url(/images/brand_4.jpg);}
     .main .sec02 .mask_text.type5:before{background-image: url(/images/brand_5.jpg);}
+    .main .sec02 .mask_text.type6:before{background-image: url(/images/brand_6.jpg);}
+    .main .sec02 .mask_text.type7:before{background-image: url(/images/brand_7.jpg);}
+    .main .sec02 .mask_text.type8:before{background-image: url(/images/brand_8.jpg);}
     .main .sec02 .mask_text .zoom_circle{background-size: 1200px;width: 100%;height: 100%;top: 0;left: 0;clip-path: circle(0%);}
     .main .sec02 .mask_text.on .zoom_circle.on{clip-path: circle(100%);transition: clip-path 1s 800ms ease-out;}
 
@@ -157,7 +163,7 @@
     .main .sec02 .mask_text{width: 100%;border-radius: 0;height: 216px;}
     .main .sec02 .mask_text .zoom_circle{width: 100%;height: 100%;top: 0;left: 0;}
     .main .sec02 .tab_box{margin: 40px 0 50px;}
-    .main .sec02 .tab_box .brand_tab{width: 150px;height: 50px;border-radius: 25px;font-size: 20px;}
+    .main .sec02 .tab_box .brand_tab{width: 150px;height: 50px;border-radius: 25px;font-size: 20px; margin-top: 20px;}
     .main .sec02 .matchbox{margin-bottom: 35px;}
     .main .sec02 .linkbox{margin-bottom: 80px;}
     .main .sec02 .linkbox a{font-size: 22px;}
@@ -169,8 +175,8 @@
     .main .sec02{margin-bottom: 90px;}
     .main .sec02 .brand_slogan{font-size: 34px;margin-bottom: 18px;}
     .main .sec02 .brand_text{font-size: 20px;line-height: 28px;margin-bottom: 34px;}
-    .main .sec02 .tab_box .brand_tab{width: 110px;height: 42px;border-radius: 21px;font-size: 18px;}
-    .main .sec02 .tab_box .brand_tab+ .brand_tab{margin-left: 10px;}
+    .main .sec02 .tab_box .brand_tab{width: 120px;height: 42px;border-radius: 21px;font-size: 18px;}
+    .main .sec02 .tab_box .brand_tab+ .brand_tab{margin-left: 10px; margin-top: 20px;}
     .main .sec02 .matchtext{font-size: 16px;line-height: 24px;}
     .main .sec02 .linkbox a{font-size: 20px;}
     .main .sec02 .linkbox a:after{width: 7px;height: 20px;}
